--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.edu.ucsal.biblioteca">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +20,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".DetalheActivity" />
-        <activity android:name=".LivroActivity" />
         <activity android:name=".LivrosActivity"></activity>
     </application>
 
