--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,6 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Fri Apr 20 08:24:13 GMT-03:00 2018
-systemProp.http.proxyHost=proxy.ucsal.br
+systemProp.http.proxyHost=8080
 org.gradle.jvmargs=-Xmx1536m
 systemProp.http.proxyPort=8080
