--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,20 @@
 apply plugin: 'com.android.application'
 
 repositories {
-    maven {
-        url 'https://repo1.maven.org/maven2/'
+    jcenter()
+    google()
+}
+allprojects {
+    repositories {
+        jcenter()
+        maven {
+            url "https/maven.google.com"
+        }
     }
 }
-
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId 'br.edu.ucsal.biblioteca'
         minSdkVersion 17
@@ -27,9 +33,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-    compile 'com.loopj.android:android-async-http:1.4.9'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'com.android.support:appcompat-v7:25.4.0'
+    implementation 'com.android.support:design:25.4.0'
 }
